# spoon-core

./: README.md  pyproject.toml  requirements.txt  tox.ini
examples/: README.md  evm_toolkit_demo.py  graph_crypto_analysis.py  memory_suite_demo.py  my_agent_demo.py  neofs-agent-demo.py  spoon_search_agent.py  x402_agent_demo.py
examples/mcp/: README.md  deepwiki_demo.py
examples/turnkey/: README.md  turnkey_trading_use_case.py
spoon_ai/: chat.py
spoon_ai/agents/: base.py
spoon_ai/graph/: engine.py
spoon_ai/llm/: config.py  manager.py
spoon_ai/llm/providers/: anthropic_provider.py  gemini_provider.py  openai_compatible_provider.py
spoon_ai/memory/: __init__.py  mem0_client.py  short_term_manager.py  utils.py
spoon_ai/neofs/: client.py
spoon_ai/tools/: __init__.py  neofs_tools.py  x402_payment.py
